# tarotreading

./: README.md  main.py  pyproject.toml  tarotreading.py
