[project]
name = "tarotreading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "marimo>=0.13.15",
    "openai>=1.83.0",
    "pillow>=11.2.1",
    "transformers>=4.52.4",
    "vllm>=0.9.0.1",
]
